syntax = "proto3";

message BlackAction {
    oneof value {
        Record rc = 1;
        Org or = 3;
        Transaction tr =4;
        Agency  ac= 5;
    }
    string funcName = 2;
}

message Record {
    string recordId   = 1;
    string docType    = 2;
    string clientId   = 3;
    string clientName = 4;
    string negativeType  = 5;
    string negativeSeverity = 6;
    string negativeInfo = 7;
    string orgAddr = 8;
    bool   searchable = 9;
    string createTime = 10;
    string updateTime = 11;
    string orgId = 12;
}
message Transaction {
    string docType = 1;
    string txId = 2;
    string from = 3;
    string to  = 4;
    int64  credit = 5;
    string createTime = 6;
    string updateTime = 7;
}
message Org {
    string docType = 1;
    string orgId = 2;
    string orgName = 3;
    string orgAddr = 4;
    int64  orgCredit =5;
    string createTime = 6;
    string updateTime = 7;
}
message Agency {
    string name  = 1;
    string addr = 2;
    int64 credit = 3;
    int64 issueCredit = 4;
    string createTime = 5;
    string updateTime = 6;

}
message Query {
    oneof value {
        QueryOrgParam queryOrg = 1;
        QueryTransactionParam queryTransaction = 2;
        QueryRecordParam queryRecord  =3;
        DeleteRecordParam  delRecord= 4;
    }
    string PrivateKey = 5;
}
message QueryOrgParam {
    string orgId =1;
}
message QueryTransactionParam {
    string byTxId =1;
    string byToAddr = 2;
}
message QueryRecordParam {
    string byClientId = 1;
    string byClientName = 2;
}
message DeleteRecordParam {
    string orgId = 1;
    string  recordId = 2;
}